--- a/ClientInformationService/pom.xml
+++ b/ClientInformationService/pom.xml
@@ -27,6 +27,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.example.datautil</groupId>
+            <artifactId>DataUtilLib</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
