--- a/AnimalHospital/AnimalHospitalRepositoryLib/pom.xml
+++ b/AnimalHospital/AnimalHospitalRepositoryLib/pom.xml
@@ -3,9 +3,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.0.0</version>
+		<groupId>org.csystem</groupId>
+		<artifactId>animalhospital-microservices</artifactId>
+		<version>6.0.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
@@ -13,6 +13,7 @@
 	<artifactId>com-metemengen-library-animalhospital-repository</artifactId>
 	<version>1.1.0</version>
 	<name>com-metemengen-library-animalhospital-repository</name>
+
 
 	<repositories>
 		<repository>
