--- a/AnimalHospitalMicroService/AnimalService/src/main/resources/application.properties
+++ b/AnimalHospitalMicroService/AnimalService/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+#JDBC properties
+spring.datasource.url=jdbc:postgresql://localhost:5432/animalhospitaldb
+spring.datasource.username=postgres
+spring.datasource.password=12345
 
+spring.profiles.default=dev
+
+#Server props
+server.port=50502
