--- a/AnimalHospitalMicroService/VeterinarianPostService/pom.xml
+++ b/AnimalHospitalMicroService/VeterinarianPostService/pom.xml
@@ -9,23 +9,33 @@
         <relativePath>../pom.xml</relativePath> <!-- lookup parent from repository -->
     </parent>
 
-    <artifactId>AnimalService</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>AnimalService</name>
-    <description>AnimalService</description>
+    <artifactId>VeterinarianPostServiceApp</artifactId>
+    <version>1.0.0</version>
+    <name>VeterinarianPostServiceApp</name>
+    <description>VeterinarianPostService</description>
 
     <dependencies>
+
         <dependency>
             <groupId>com.metemengen</groupId>
             <artifactId>com-metemengen-library-animalhospital-repository</artifactId>
             <version>1.0.0</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.karandev</groupId>
+            <artifactId>com-karandev-util-exception</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+
 
 </project>
