--- a/AnimalHospitalMicroService/AnimalService/src/main/resources/application-dev.properties
+++ b/AnimalHospitalMicroService/AnimalService/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
 #JDBC properties
-spring.datasource.url=jdbc:postgresql://localhost:5432/animalhospitaldb
+spring.datasource.url=jdbc:postgresql://localhost:5432/japp1j22_animalhospitaldb_dev
 spring.datasource.username=postgres
 spring.datasource.password=12345
