--- a/AnimalHospitalMicroService/VeterinarianPostService/src/main/resources/application-dev.properties
+++ b/AnimalHospitalMicroService/VeterinarianPostService/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 #JDBC properties
 spring.datasource.url=jdbc:postgresql://localhost:5432/japp1j22_animalhospitaldb_dev
 spring.datasource.username=postgres
-spring.datasource.password=12345
+spring.datasource.password=12345678
 
 spring.sql.init.mode=always
 spring.sql.init.continue-on-error=false
