--- a/GeonamesPostalCodeSearchApp/PostalCodeService/PostalCodeSearchJSONService/src/main/resources/application.properties
+++ b/GeonamesPostalCodeSearchApp/PostalCodeService/PostalCodeSearchJSONService/src/main/resources/application.properties
@@ -1,3 +1,13 @@
+#JDBC properties
+spring.datasource.url=jdbc:h2:mem:japp1j22_postalcodeappdb_dev
+#spring.datasource.url=jdbc:h2:file:./data/japp1j22_postalcodeappdb_dev
+spring.datasource.username=root
+spring.datasource.password=12345
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/dev/h2
+#spring.jpa.hibernate.ddl-auto=create
 
 app.geonames.url=http://api.geonames.org/postalCodeSearchJSON?postalcode=%s&maxRows=100&username=nuricanozturk&country=tr
 
