--- a/GeonamesPostalCodeSearchApp/PostalCodeService/PostalCodeSearchJSONService/src/main/resources/application.properties
+++ b/GeonamesPostalCodeSearchApp/PostalCodeService/PostalCodeSearchJSONService/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #JDBC properties
 spring.datasource.url=jdbc:h2:mem:japp1j22_postalcodeappdb_dev
 #spring.datasource.url=jdbc:h2:file:./data/japp1j22_postalcodeappdb_dev
-spring.datasource.username=root
+spring.datasource.username=sa
 spring.datasource.password=12345
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
